# georeach

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  PUSH_CHECKLIST.md  Project Prompt.md  README.md  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: ci.yml
docker/: Dockerfile.pipeline
docs/design/: ARCHITECTURE.md  DATA_SOURCES.md
frontend/: app.js  index.html  style.css
georeach/: __init__.py  cli.py  config.py
georeach/analysis/: accessibility.py  exposure.py  priority.py
georeach/db/: loader.py  queries.py  schema.py
georeach/export/: __init__.py  cog.py  geoparquet.py  stac.py
georeach/grid/: __init__.py  h3_grid.py
georeach/ingest/: admin.py  flood.py  health.py  overture.py  population.py
georeach/tiles/: __init__.py  pmtiles.py
sql/: 01_extensions.sql  02_schema.sql  03_accessibility.sql
tests/: __init__.py  conftest.py  test_accessibility.py  test_exposure.py  test_grid.py  test_priority.py
