[build-system]
requires = ["setuptools>=65.0", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "georeach"
version = "0.1.0"
description = "Flood-Exposure & Service-Accessibility Geospatial Platform for DRC"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "GeoReach Contributors"}
]
keywords = ["gis", "geospatial", "postgis", "flood", "accessibility", "h3"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
    "geopandas>=0.14.0",
    "shapely>=2.0.0",
    "pyogrio>=0.7.0",
    "rasterio>=1.3.9",
    "rioxarray>=0.15.0",
    "rasterstats>=0.19.0",
    "h3>=3.7.6",
    "duckdb>=0.10.0",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.1.0",
    "geoalchemy2>=0.14.0",
    "typer>=0.9.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "loguru>=0.7.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "pyarrow>=14.0.0",
    "pystac>=1.9.0",
    "rio-cogeo>=5.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-postgresql>=5.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
    "types-requests>=2.31.0",
    "types-PyYAML>=6.0.0",
]

[project.scripts]
georeach = "georeach.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["georeach*"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "C4", "PT", "SIM"]
ignore = [
    "E501",  # Line too long (handled by black)
    "B008",  # Do not perform function calls in argument defaults (common in Typer CLI)
    "A003",  # Class attribute shadowing builtin (acceptable for config classes)
    "PT001", # pytest.fixture() is already used correctly
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*.py" = ["F401"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "geopandas.*",
    "shapely.*",
    "rasterio.*",
    "rasterstats.*",
    "h3.*",
    "duckdb.*",
    "pyogrio.*",
    "rioxarray.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=georeach --cov-report=term-missing"
